<resources>
    <string name="default_event_summary" comment="Event has no title">(no title)</string>
    <string name="multiple_days_event_summary" comment="We display the start time of the event as prefix, example: 16:00 Summary">%1$s %2$s</string>
    <string name="default_user_email">(no email address)</string>
    <string name="default_user_display_name">(no name)</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>
    <string name="dialog_title_delete_event">Delete event</string>
    <string name="dialog_title_delete_recurring_event">Delete recurring event</string>
    <string name="dialog_description_delete_event">Would you like to delete this event?</string>
    <string name="dialog_description_delete_recurring_event">Would you like to delete all the events in the series?</string>
    <string name="dialog_description_delete_non_standalone_single_edit_event">This event has been updated by the organizer. Would you like to delete this event?</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_remove">Remove</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_update">Update</string>
    <string name="dialog_description_delete_event_as_organizer">A cancellation email will be sent to the event participants. Would you like to delete this event?</string>
    <string name="dialog_description_delete_event_as_organizer_disabled">Your address is disabled. A cancellation email cannot be sent to the event participants. Would you like to delete this event anyway?</string>
    <string name="dialog_description_delete_recurring_event_as_organizer">A cancellation email will be sent to the event participants. Would you like to delete all events in this series?</string>
    <string name="dialog_description_delete_recurring_event_as_organizer_disabled">Your address is disabled. A cancellation email cannot be sent to the event participants. Would you like to delete all events in this series anyway?</string>
    <string name="dialog_description_delete_single_event_as_attendee">The organizer of this event will be notified that you decline the invitation. Would you like to delete this event?</string>
    <string name="dialog_description_delete_single_event_as_attendee_disabled">The organizer of this event will not be notified that you decline the invitation as you can\'t send emails from the invited address. Would you like to delete this event anyway?</string>
    <string name="dialog_description_delete_recurring_event_as_attendee">The organizer of this series of events will be notified that you decline the invitation. Would you like to delete all the events in this series?</string>
    <string name="dialog_description_delete_recurring_event_as_attendee_disabled">The organizer of this series of events will not be notified that you decline the invitation as you can\'t send emails from the invited address. Would you like to delete all the events in this series anyway?</string>
    <string name="dialog_description_delete_non_standalone_single_edit_event_as_attendee">This event has been updated. The organizer will be notified that you decline the invitation. Would you like to delete this event?</string>
    <string name="dialog_description_delete_non_standalone_single_edit_event_as_attendee_disabled">This event has been updated. The organizer will not be notified that you decline the invitation as you can\'t send emails from the invited address. Would you like to delete this event?</string>
    <string name="dialog_description_warning_delete_recurring_with_single_edit_as_attendee" comment="Order of those two arguments will always be the same. It is a message followed by a warning on a new line.">%1$s\n%2$s</string>
    <string name="dialog_description_warning_delete_recurring_with_answered_single_edit_as_attendee">Occurrences previously updated by the organizer will be kept, but your answers will be lost</string>
    <string name="dialog_description_warning_delete_recurring_with_unanswered_single_edit_as_attendee">Occurrences previously updated by the organizer will be kept</string>
    <string name="event_delete_as_attendee_send_prefs_error_message" comment="string placeholder is a list of failed emails">The organizer cannot be notified that you decline the invitation:\n\n• %1$s\n\nWould you like to delete the event anyway?</string>
    <string name="dialog_button_set">Set</string>
    <string name="dialog_button_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_leave">Leave</string>
    <string name="action_recreate">Clear</string>
    <string name="action_today">Today</string>
    <string name="action_create_event">Create event</string>
    <string name="action_mark_default">Mark as default</string>
    <string name="agenda_no_events">No events</string>
    <string name="agenda_loading_events">Loading events…</string>
    <string name="agenda_loading_events_error">Error loading events</string>
    <string name="agenda_header_date" comment="Tuesday 28">%1$s %2$d</string>
    <string name="day_view_all_day_more">+ %1$d more</string>
    <string name="event_all_day">All Day</string>
    <string name="event_time_period_spanning_single_day" comment="Example: 13:00 - 15:00">%1$s \u2013 %2$s</string>
    <string name="event_time_period_spanning_many_days" comment="Example: Monday 12 January - Tuesday 13 January">%1$s \u2013\n%2$s</string>
    <string name="event_alarm_label_at_event_time">At time of event</string>
    <string name="event_alarm_label_at_event_time_by_email">At time of event by email</string>
    <string name="event_alarm_label_on_the_same_day">On the same day</string>
    <string name="event_alarm_label_before">%1$s before</string>
    <string name="event_alarm_label">%1$s</string>
    <string name="event_alarm_label_before_by_email">%1$s before by email</string>
    <string name="event_alarm_label_not_before_with_time" comment="Example: On the same day at 15:00">%1$s at %2$s</string>
    <string name="event_alarm_label_not_before_with_time_by_email" comment="Example: 1 day before at 9:00 by email">%1$s at %2$s by email</string>
    <string name="event_alarm_label_before_with_time" comment="Example: 1 day before at 9:00">%1$s before at %2$s</string>
    <string name="event_alarm_label_before_with_time_by_email" comment="Example: 1 day before at 9:00 by email">%1$s before at %2$s by email</string>
    <string name="event_recurrence_occurs_on_day_of_week" comment="Example: weekly on Friday">%1$s on %2$s</string>
    <string name="event_recurrence_occurs_on_day_of_month" comment="Example: monthly on day 15">%1$s on day %2$d</string>
    <string name="event_recurrence_occurs_on_day_of_week_full_words" comment="Example: monthly on first Friday">%1$s on %2$s</string>
    <string name="event_recurrence_none">Does not repeat</string>
    <string name="event_recurrence_daily">Daily</string>
    <string name="event_recurrence_weekly">Weekly</string>
    <string name="event_recurrence_monthly">Monthly</string>
    <string name="event_recurrence_yearly">Yearly</string>
    <string name="event_recurrence_weekly_on_all_days">all days</string>
    <string name="event_recurrence_until" comment="Event happens regularly until a date">until %1$s</string>
    <string name="event_recurrence_until_with_timezone" comment="Event happens regularly until a date with (timezone)">until %1$s (%2$s)</string>
    <string name="event_attendee_count" comment="Example: 5 participants">%1$d %2$s</string>
    <string name="event_status_canceled">Canceled</string>
    <string name="event_calendar_disabled" comment="Example: My Calendar (Disabled)"><![CDATA[%1$s <i>(Disabled)</i>]]></string>
    <string name="event_default_color" comment="Label for the default color. Example: Blue (Default)">(Default)</string>
    <string name="event_attendee_status_separator">%1$s, %2$s</string>
    <string name="event_attendee_yes" comment="How many attendees answered yes">%1$d yes</string>
    <string name="event_attendee_maybe" comment="How many attendees answered maybe">%1$d maybe</string>
    <string name="event_attendee_no" comment="How many attendees answered no">%1$d no</string>
    <string name="event_attendee_unanswered" comment="How many attendees didn't answer yet">%1$d pending</string>
    <string name="event_attendee_is_organizer">You are the organizer</string>
    <string name="event_attendee_organizer">Organizer</string>
    <string name="event_attendee_optional">Optional</string>
    <string name="event_attendee_is_current_user">You</string>
    <string name="event_answer_attending">Attending?</string>
    <string name="event_answer_yes">Yes</string>
    <string name="event_answer_no">No</string>
    <string name="event_answer_maybe">Maybe</string>
    <string name="event_decryption_error_dialog_title">Event failed to decrypt</string>
    <string name="event_decryption_error_dialog_message">Decryption of this event’s content failed.</string>
    <string name="event_decryption_error_dialog_confirmation">Delete event</string>
    <string name="event_decryption_error_dialog_confirmation_recurring">Delete events</string>
    <string name="event_decryption_error_dialog_close">Close</string>
    <string name="event_signature_verification_failure">The verification of the event signature failed. <a href="https://proton.me/support/what-is-a-digital-signature">Learn more</a></string>
    <string name="event_signature_verification_in_progress">Verification of the event signature is in progress.</string>
    <string name="event_signature_verification_network_error">Verification of the event signature was interrupted by an error. <a href="">Try again</a></string>
    <string name="event_change_answer_recurring_title">Update recurring event</string>
    <string name="event_text_custom">custom</string>
    <string name="event_alarm_partial_day_1">at time of event</string>
    <string name="event_alarm_partial_day_2">10 minutes</string>
    <string name="event_alarm_partial_day_3">30 minutes</string>
    <string name="event_alarm_partial_day_4">1 hour</string>
    <string name="event_alarm_partial_day_5">1 week</string>
    <string name="event_alarm_action">Send by</string>
    <string name="event_alarm_action_notification">notification</string>
    <string name="event_alarm_action_email">email</string>
    <string name="event_recurrence_1">do not repeat</string>
    <string name="event_recurrence_2">every day</string>
    <string name="event_recurrence_3">every week</string>
    <string name="event_recurrence_4">every month</string>
    <string name="event_recurrence_5">every year</string>
    <string name="import_from_google_title">Import from Google</string>
    <string name="spotlight_dialog_header">What\'s new</string>
    <string name="spotlight_dialog_month_view_title">Month view</string>
    <string name="spotlight_dialog_month_view_description">Get an overview of your events with our new month view. Switch between views using the menu.</string>
    <string name="import_assistant_guide_subtitle">Make the switch to privacy. Easily and securely.</string>
    <string name="import_assistant_guide_description">Move your events and other data from Google to Proton. The Easy Switch importer guides you each step of the way and encrypts your data as it\'s moved.</string>
    <string name="import_assistant_new_import">New import</string>
    <string name="import_assistant_previous_import">Previous imports</string>
</resources>