<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false">

        <RadioGroup
            android:id="@+id/event_form_alarm_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_page"
            android:paddingStart="@dimen/radio_group_inner_padding"
            android:paddingEnd="@dimen/radio_group_inner_padding"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/event_form_alarm_1"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_alarm_partial_day_1" />

            <RadioButton
                android:id="@+id/event_form_alarm_2"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_alarm_partial_day_2" />

            <RadioButton
                android:id="@+id/event_form_alarm_3"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_alarm_partial_day_3" />

            <RadioButton
                android:id="@+id/event_form_alarm_4"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_alarm_partial_day_4" />

            <RadioButton
                android:id="@+id/event_form_alarm_5"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/event_alarm_partial_day_5" />

            <RadioButton
                android:id="@+id/event_form_alarm_custom"
                style="@style/Text.Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_text_custom" />

        </RadioGroup>

        <include
            android:id="@+id/event_form_alarm_custom_layout"
            layout="@layout/event_form_custom_alarm_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/default_margin_text_vertical_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/event_form_alarm_action_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="event_form_alarm_custom_layout,event_form_alarm_radio_group" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_form_alarm_send_by_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/event_form_alarm_action_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:id="@+id/event_form_alarm_action_separator"
                style="@style/Separator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/event_form_alarm_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text.DefaultSmall.Weak"
                android:text="@string/event_alarm_action"
                android:layout_marginStart="@dimen/spacing_page"
                android:layout_marginEnd="@dimen/spacing_page"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintTop_toBottomOf="@+id/event_form_alarm_action_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/event_form_alarm_action_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_element_small"
                android:paddingStart="@dimen/radio_group_inner_padding"
                android:paddingEnd="@dimen/radio_group_inner_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_form_alarm_action">

                <RadioButton
                    android:id="@+id/event_form_alarm_action_notification"
                    style="@style/Text.Default.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_alarm_action_notification" />

                <RadioButton
                    android:id="@+id/event_form_alarm_action_email"
                    style="@style/Text.Default.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_alarm_action_email" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
