<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/import_assistant_status_guide_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/import_assistant_status_guide_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Proton.Text.Headline"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/import_from_google_title"/>

    <TextView
        android:id="@+id/import_assistant_status_guide_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Proton.Text.Headline.Small"
        android:textColor="?attr/proton_interaction_norm"
        app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintStart_toStartOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintEnd_toEndOf="@+id/import_assistant_status_guide_title"
        android:layout_marginTop="8dp"
        android:text="@string/import_assistant_guide_subtitle"/>

    <TextView
        android:id="@+id/import_assistant_status_guide_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Proton.Text.Default.Weak"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_subtitle"
        app:layout_constraintStart_toStartOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintEnd_toEndOf="@+id/import_assistant_status_guide_title"
        android:text="@string/import_assistant_guide_description"/>

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/import_assistant_status_guide_new_import_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintEnd_toEndOf="@+id/import_assistant_status_guide_title"
        android:layout_marginBottom="16dp"
        android:text="@string/import_assistant_new_import"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/import_assistant_status_guide_imports_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintEnd_toEndOf="@+id/import_assistant_status_guide_title"
        app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_description">

        <View
            android:id="@+id/import_assistant_status_guide_imports_press"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_imports_divider_top"
            app:layout_constraintBottom_toTopOf="@+id/import_assistant_status_guide_imports_divider_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/import_assistant_status_guide_imports_divider_top"
            style="@style/Separator"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/import_assistant_status_guide_imports_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Proton.Text.Default"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_imports_divider_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/import_assistant_status_guide_imports_arrow"
            android:text="@string/import_assistant_previous_import"/>

        <TextView
            android:id="@+id/import_assistant_status_guide_imports_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Proton.Text.DefaultSmall.Weak"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_imports_title"
            app:layout_constraintStart_toStartOf="@+id/import_assistant_status_guide_imports_title"
            app:layout_constraintEnd_toEndOf="@+id/import_assistant_status_guide_imports_title"
            tools:text="1 ongoing import"/>

        <View
            android:id="@+id/import_assistant_status_guide_imports_divider_bottom"
            style="@style/Separator"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_imports_subtitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/import_assistant_status_guide_imports_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_proton_arrow_right"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/import_assistant_status_guide_imports_divider_top"
            app:layout_constraintBottom_toTopOf="@+id/import_assistant_status_guide_imports_divider_bottom"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
